<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="319dp"
        android:layout_height="123dp"
        android:layout_marginTop="16dp"
        android:text="@string/pit_info"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textView24"
        android:layout_width="309dp"
        android:layout_height="58dp"
        android:layout_marginTop="12dp"
        android:text="@string/pit_marcar"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="38dp"
        android:layout_height="189dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24">

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="67dp" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="58dp" />
    </RadioGroup>
    <EditText
        android:id="@+id/editText5"
        android:layout_width="144dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/pit_a"
        android:inputType="numberDecimal"
        android:paddingStart="100dp"
        android:paddingEnd="10dp"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/textView24"
        android:autofillHints="" />
    <EditText
        android:id="@+id/editText6"
        android:layout_width="144dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/pit_b"
        android:inputType="numberDecimal"
        android:paddingStart="100dp"
        android:paddingEnd="10dp"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        android:autofillHints="" />
    <EditText
        android:id="@+id/editText12"
        android:layout_width="144dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/pit_c"
        android:inputType="numberDecimal"
        android:paddingStart="100dp"
        android:paddingEnd="10dp"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/editText6"
        android:autofillHints="" />
    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/pit_res"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
    <TextView
        android:id="@+id/textView26"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/textView25"
        app:layout_constraintTop_toBottomOf="@+id/editText12" />
    <Button
        android:id="@+id/button5"
        android:layout_width="143dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_resolver"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />
    <Button
        android:id="@+id/button6"
        android:layout_width="143dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_limpiar"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="165dp"
        android:layout_height="253dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/pitagoras"
        app:layout_constraintStart_toEndOf="@+id/editText6"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

</androidx.constraintlayout.widget.ConstraintLayout>