<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/rombo_titulo"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView39"
        android:layout_centerHorizontal="true"
        android:text="@string/rombo_area"
        android:textColor="#000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView39" />

    <ImageView
        android:id="@+id/textView36"
        android:layout_width="273dp"
        android:layout_height="81dp"
        android:layout_below="@+id/textView40"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ec_rombo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView40" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView36"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_personalizado"
        android:ems="10"
        android:hint="@string/rombo_diagonal1"
        android:inputType="numberSigned"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#000"
        android:textColorHint="#A39A9A"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <EditText
        android:id="@+id/editText21"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editText3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/et_personalizado"
        android:ems="10"
        android:hint="@string/rombo_diagonal2"
        android:inputType="numberSigned"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#000"
        android:textColorHint="#A39A9A"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="187dp"
        android:layout_height="182dp"
        android:layout_below="@+id/textView36"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="53dp"
        android:layout_toEndOf="@+id/editText3"
        android:src="@drawable/rombo"
        app:layout_constraintStart_toEndOf="@+id/editText3"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText21"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/rect_res_area"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText21" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/textView54"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/tv_personalizado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView54" />

    <TextView
        android:id="@+id/textView55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView32"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/rect_res_perimetro"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <TextView
        android:id="@+id/textView56"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/textView55"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="61dp"
        android:background="@drawable/tv_personalizado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView55" />

    <Button
        android:id="@+id/button11"
        android:layout_width="112dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView5"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@+id/textView32"
        android:background="@drawable/btn_personalizado"
        android:text="@string/btn_resolver"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView32"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/button12"
        android:layout_width="112dp"
        android:layout_height="50dp"
        android:layout_below="@+id/button11"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="64dp"
        android:layout_toEndOf="@+id/textView56"
        android:background="@drawable/btn_personalizado"
        android:text="@string/btn_limpiar"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView56"
        app:layout_constraintTop_toBottomOf="@+id/button11" />
</RelativeLayout>